# MCPtool

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: discovery.yaml
data/: deltas.csv  discover_calendar.jsonl  discover_drive.jsonl  discover_gmail.jsonl  discover_i_want_an_agent_moves.jsonl  discover_i_want_an_agent_movies.jsonl  discover_i_want_an_agent_that_can_do_notion.jsonl  discover_jira.jsonl  discover_motion.jsonl  discover_movies.jsonl  discover_notion.jsonl  discover_postgres.jsonl  discover_slack.jsonl  discover_tracking.jsonl  servers.csv
data/manifests/: docker-calendar.json  docker-drive.json  docker-github.json  docker-gmail.json  docker-sheets.json  docker-slack.json  github-python.json  gmail-python.json  google-calendar-python.json  google-drive-python.json  google-sheets-python.json  mcp-servers-calendar.json  mcp-servers-drive.json  mcp-servers-github.json  mcp-servers-gmail.json  mcp-servers-sheets.json  mcp-servers-slack.json  mcp-servers:0xDAEF0F-job-searchoor.json  mcp-servers:13rac1-videocapture-mcp.json  mcp-servers:1Panel-dev-mcp-1panel.json  mcp-servers:21st-dev-magic-mcp.json  mcp-servers:66julienmartin-MCP-server-Deepseek_R1.json  mcp-servers:66julienmartin-MCP-server-Qwen_Max.json  mcp-servers:8beeeaaat-touchdesigner-mcp.json  mcp-servers:8enSmith-mcp-open-library.json  mcp-servers:AB498-code-context-provider-mcp.json  mcp-servers:AB498-computer-control-mcp.json  (+1069 more)
static/: style.css
templates/: clusters.html  discover.html  index.html  recommend.html  server.html
tests/: test_clustering.py  test_crawlers_smoke.py  test_fingerprint.py  test_integration.py  test_normalize.py  test_query.py  test_reputation.py
(+47 files in other folders)
